--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,10 +1,12 @@
+@use 'variables';
+
 .hero {
     padding-top: 64px;
     padding-bottom: 100px;
     background-image: url(../images/fireworks.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 60vh;
+    height: 70vh;
     position: relative;
 
     .container {
@@ -17,7 +19,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: variables.$secondaryTextColor;
         content: '';
         opacity: .7;
     }
@@ -39,7 +41,7 @@
 
     @media (max-width: 640px){
         padding: 40px 0;
-        height: 40vh;
+        height: 60vh;
         
         &__bolo {
             height: 60px;
